[tool.poetry]
name = "mlh"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
requests = "^2.24.0"
ujson = "^3.0.0"
tqdm = "^4.48.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
